<resources>
    <string name="app_name">Inertial Navigation</string>
    <string name="other_attitude_estimators">Other attitude estimators:</string>
    <string name="leveling">Leveling</string>
    <string name="improved_leveling">Improved leveling</string>
    <string name="roll_degrees">Roll: %1$.2f º</string>
    <string name="pitch_degrees">Pitch: %1$.2f º</string>
    <string name="yaw_degrees">Yaw: %1$.2f º</string>
    <string name="roll_accuracy_degrees">Roll accuracy: %1$.2f º</string>
    <string name="pitch_accuracy_degrees">Pitch accuracy: %1$.2f º</string>
    <string name="yaw_accuracy_degrees">Yaw accuracy: %1$.2f º</string>
    <string name="heading_accuracy_degrees">Heading accuracy: %1$.2f º</string>
    <string name="x_pos_meters">X: %1$.2f m</string>
    <string name="y_pos_meters">Y: %1$.2f m</string>
    <string name="z_pos_meters">Z: %1$.2f m</string>
    <string name="yaw_standard_deviation_degrees">Yaw standard deviation: %1$.2f º</string>
    <string name="leveling_estimator">Leveling estimator:</string>
    <string name="gravity_leveling">Gravity leveling</string>
    <string name="accelerometer_low_pass_filter_leveling">Accelerometer low pass leveling</string>
    <string name="accelerometer_mean_filter_leveling">Accelerometer mean leveling</string>
    <string name="accelerometer_median_filter_leveling">Accelerometer median leveling</string>
    <string name="accelerometer_uncalibrated_low_pass_filter_leveling">Accelerometer uncalibrated low pass leveling</string>
    <string name="accelerometer_uncalibrated_mean_filter_leveling">Accelerometer uncalibrated mean leveling</string>
    <string name="accelerometer_uncalibrated_median_filter_leveling">Accelerometer uncalibrated median leveling</string>
    <string name="accurate_leveling_estimator">Accurate leveling estimator:</string>
    <string name="gravity_accurate_leveling">Gravity accurate leveling</string>
    <string name="accelerometer_low_pass_filter_accurate_leveling">Accelerometer low pass accurate leveling</string>
    <string name="accelerometer_mean_filter_accurate_leveling">Accelerometer mean accurate leveling</string>
    <string name="accelerometer_median_filter_accurate_leveling">Accelerometer median accurate leveling</string>
    <string name="accelerometer_uncalibrated_low_pass_filter_accurate_leveling">Accelerometer uncalibrated low pass accurate leveling</string>
    <string name="accelerometer_uncalibrated_mean_filter_accurate_leveling">Accelerometer uncalibrated mean accurate leveling</string>
    <string name="accelerometer_uncalibrated_median_filter_accurate_leveling">Accelerometer uncalibrated median accurate leveling</string>
    <string name="relative_gyroscope_attitude_estimator">Relative gyroscope attitude estimator:</string>
    <string name="relative_gyroscope_attitude_estimator_calibrated">Calibrated gyroscope</string>
    <string name="relative_gyroscope_attitude_estimator_uncalibrated">Uncalibrated gyroscope</string>
    <string name="accurate_relative_gyroscope_attitude_estimator">Accurate relative gyroscope attitude estimator:</string>
    <string name="accurate_relative_gyroscope_attitude_estimator_calibrated">Calibrated gyroscope</string>
    <string name="accurate_relative_gyroscope_attitude_estimator_uncalibrated">Uncalibrated gyroscope</string>
    <string name="leveled_relative_attitude_estimator">Leveled relative attitude estimator:</string>
    <string name="leveled_relative_attitude_estimator_with_accurate_leveling">Leveled relative attitude estimator with accurate leveling:</string>
    <string name="leveled_relative_attitude_estimator_with_accurate_relative_attitude">Leveled relative attitude estimator with accurate relative attitude:</string>
    <string name="geomagnetic_attitude_estimator">Geomagnetic attitude estimator:</string>
    <string name="uncalibrated_magnetometer">Uncalibrated magnetometer</string>
    <string name="world_magnetic_model">World Magnetic Model</string>
    <string name="fused_geomagnetic_attitude_estimator">Fused geomagnetic attitude estimator:</string>
    <string name="double_fused_geomagnetic_attitude_estimator">Double fused geomagnetic attitude estimator:</string>
    <string name="pose_estimator_label">Pose Estimator:</string>
    <string name="pose_estimator_button">Pose Estimator</string>
    <string name="local_pose_estimator_button">Local Pose Estimator</string>
    <string name="relative_pose_estimator_button">Relative Pose Estimator</string>
    <string name="android_attitude_estimator">Android attitude estimator:</string>
    <string name="absolute_attitude">Absolute attitude</string>
    <string name="relative_attitude">Relative attitude</string>
    <string name="kalman_relative_attitude">Kalman relative attitude</string>
    <string name="kalman_absolute_attitude">Kalman absolute attitude</string>
</resources>