<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.irurueta.android.gl.cube.CubeTextureView
        android:id="@+id/cube"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        tools:text="@string/roll_degrees"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        tools:text="@string/pitch_degrees"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roll" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/yaw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        tools:text="@string/yaw_degrees"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pitch" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/x_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        tools:text="@string/x_pos_meters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yaw"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/y_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        tools:text="@string/y_pos_meters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/x_pos"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/z_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        tools:text="@string/z_pos_meters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/y_pos"/>
</androidx.constraintlayout.widget.ConstraintLayout>